--- a/package.json
+++ b/package.json
@@ -51,10 +51,10 @@
 		"grunt": "1.0.1",
 		"grunt-bump": "0.8.0",
 		"grunt-contrib-jshint": "1.0.0",
-		"grunt-contributors": "0.0.3",
 		"grunt-conventional-changelog": "6.1.0",
-		"grunt-jsdoc-to-markdown": "2.0.0",
-		"grunt-run": "0.6.0",
+        "grunt-jsdoc-to-markdown": "2.0.0",
+        "grunt-npm": "0.0.2",
+        "grunt-run": "0.6.0",
 		"load-grunt-tasks": "3.5.0",
 		"mocha": "1.21.4"
 	}
